@@ -1,10 +1,15 @@
+2010-01-20  Georg von Hippel <gmv22@cantab.net>
+
+	* Added StarshapeMark class and constants for four-, five-,
+	six- and eight-pointed stars as vertex markers.
+
 2010-01-19  Georg von Hippel <gmv22@cantab.net>
 
 	* Added docstrings to methods missing them.
 
 	* Added PolygonalMark class and constants for triangular,
-          diamond-shaped, pentagonal, hexagonal, heptagonal and octogonal
-          vertex markers.
+        diamond-shaped, pentagonal, hexagonal, heptagonal and octogonal
+        vertex markers.
 
 2009-10-01  Georg von Hippel <gmv22@cantab.net>
 
